k8s/identityserver-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: decision-engine-dev
spec:
  clusterIP: None
  selector:
    app: mssql
  ports:
    - port: 1433
      name: sql

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip
  namespace: decision-engine-dev
spec:
  selector:
    app: mssql
  ports:
    - port: 1433
      name: sql

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
  namespace: decision-engine-dev
spec:
  serviceName: mssql
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-GA-ubuntu-16.04
        ports:
          - containerPort: 1433
        volumeMounts:
          - name: data
            mountPath: /var/opt/mssql

        livenessProbe:
          tcpSocket:
            port: 1433
          initialDelaySeconds: 60
          periodSeconds: 30

        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - |
                /opt/mssql-tools/bin/sqlcmd \
                  -S localhost -U sa -P "$SA_PASSWORD" \
                  -Q "SELECT 1"
          initialDelaySeconds: 30
          periodSeconds: 15

  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 20Gi
