k8s/rabbitmq-decision-engine-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: decision-engine-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        imagePullPolicy: IfNotPresent
        ports:
        - name: amqp
          containerPort: 5672
          protocol: TCP
        - name: management
          containerPort: 15672
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: decision-engine-dev
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
    protocol: TCP
    # opcional: si quieres dejar que Kubernetes asigne el nodePort,
    # puedes omitir esta línea. Si la fijas, se mantiene la misma:
    nodePort: 30928
  - name: management
    port: 15672
    targetPort: 15672
    protocol: TCP
    nodePort: 31894
