k8s/loan-service-deployment.yaml
# ----------------------------
# 2) Deployment del LoanService
# ----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
  namespace: decision-engine-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      containers:
      - name: loan-service
        image: loan-service:1.0
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

---
# ----------------------------
# 3) Service interno ClusterIP
# ----------------------------
apiVersion: v1
kind: Service
metadata:
  name: loan-service
  namespace: decision-engine-dev
spec:
  selector:
    app: loan-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
# ----------------------------
# 4) Ingress (LoanService.local)
# ----------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-service-ingress
  namespace: decision-engine-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: loan-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loan-service
                port:
                  number: 80
